--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jquery.neotabs.js",
+  "name": "jquery.neotabs",
   "title": "jQuery NeoTabs",
   "description": "A flexible jQuery plugin for generating acessible tabs and tabs as dropdown inspired by Dirk Ginader's Accessible-Tabs",
   "version": "0.1.4",
@@ -14,6 +14,6 @@
     "url": "git@github.com:PascalPrecht/jquery.neotabs.js.git"
   },
   "dependencies": {
-    "jquery": "~1.8",
+    "jquery": "~1.8"
   }
 }
