--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "url": "git@github.com:PascalPrecht/jquery.neotabs.js.git"
   },
   "dependencies": {
-    "jquery": "~1.8"
+    "jquery": "~1.8",
+    "grunt": "*",
+    "testacular": "*",
+    "grunt-testacular": "*"
   }
 }
