--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jquery.neotabs",
   "title": "jQuery NeoTabs",
   "description": "A flexible jQuery plugin for generating acessible tabs and tabs as dropdown inspired by Dirk Ginader's Accessible-Tabs",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "homepage": "https://github.com/PascalPrecht/jquery.neotabs.js",
   "author": {
     "name": "Pascal Precht",
@@ -14,6 +14,7 @@
     "url": "git@github.com:PascalPrecht/jquery.neotabs.js.git"
   },
   "dependencies": {
-    "jquery": "~1.8"
+    "jquery": "~1.8",
+    "jasmine-jquery": "*"
   }
 }
